Fix Help questions alignement closes #68

--- a/docs/src/css/page-call-to-action.css
+++ b/docs/src/css/page-call-to-action.css
@@ -8,5 +8,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: var(--container-max-width);
+  width: 960px;
+  padding-left: var(--space-8);
 }
